# python-traq-bot

./: .gitignore  README.md  exsample.py  main.py  pyproject.toml
traq_bot/: __init__.py  bot.py
