[tool.poetry]
name = "traq_bot"
version = "1.0.3"
description = "Bot library for traQ"
authors = ["d_etteiu8383 <ysdr83@gmail.com>"]
license = "MIT"
[tool.poetry.dependencies]
python = "^3.9.5"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
flake8 = "^4.0.1"
isort = "^5.12.0"
mypy = "^1.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
